<resources>
    <string name="app_name">Placemark</string>
    <string name="hint_placemarkTitle">Placemark Title</string>
    <string name="hint_placemarkDescription">Description</string>
    <string name="button_addPlacemark">Add Placemark</string>
    <string name="menu_addPlacemark">Add</string>
    <string name="button_addImage">Add Image</string>
    <string name="change_placemark_image">Change Image</string>
    <string name="select_placemark_image">Select Placemark image</string>
    <string name="button_savePlacemark">Save Placemark</string>
    <string name="menu_cancelPlacemark">Cancel</string>
    <string name="menu_deletePlacemark">Delete</string>
    <string name="menu_savePlacemark">Save</string>
    <string name="enter_placemark_title">Please Enter a Placemark title</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">Map</string>
    <string name="placemark_title_placeholder">Placemark Title</string>
    <string name="placemark_description_Placeholder">Placemark Description</string>
    <string name="placemark_image_placeholder">Placemark Image</string>
    <string name="title_activity_placemark_maps">Map</string>
    <string name="title_activity_placemark_list">Placemarks</string>
    <string name="title_activity_placemark">Placemark</string>
    <string name="title_activity_location">Placemark</string>
    <string name="title_activity_login"> Signup/Login to Placemark</string>
    <string name="menu_showMap">Show Map</string>
    <string name="menu_logout">Logout</string>
</resources>