<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.placemark.activities.PlacemarkActivity">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:fitsSystemWindows="true"
        app:elevation="0dip"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

      <androidx.appcompat.widget.Toolbar
          android:id="@+id/toolbarAdd"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:titleTextColor="@color/colorPrimary" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp">

      <EditText
          android:id="@+id/description"
          android:layout_width="0dp"
          android:layout_height="40dp"
          android:layout_marginTop="8dp"
          android:autofillHints=""
          android:hint="@string/hint_placemarkDescription"
          android:inputType="text"
          android:maxLength="25"
          android:maxLines="1"
          android:padding="8dp"
          android:textColor="@color/colorPrimaryDark"
          android:textSize="14sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/placemarkTitle" />

      <EditText
          android:id="@+id/placemarkTitle"
          android:layout_width="0dp"
          android:layout_height="40dp"
          android:autofillHints=""
          android:hint="@string/hint_placemarkTitle"
          android:inputType="text"
          android:maxLength="25"
          android:maxLines="1"
          android:padding="8dp"
          android:paddingTop="64dp"
          android:textColor="@color/colorPrimaryDark"
          android:textSize="14sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <Button
          android:id="@+id/btnAdd"
          android:layout_width="0dp"
          android:layout_height="40dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="8dp"
          android:layout_marginEnd="8dp"
          android:background="@color/colorAccent"
          android:stateListAnimator="@null"
          android:text="@string/button_addPlacemark"
          android:textColor="@color/colorPrimary"
          android:textSize="16sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/description" />

      <Button
          android:id="@+id/chooseImage"
          android:layout_width="0dp"
          android:layout_height="36dp"
          android:layout_margin="16dp"
          android:layout_marginStart="4dp"
          android:layout_marginTop="8dp"
          android:layout_marginEnd="25dp"
          android:background="@color/colorAccent"
          android:paddingTop="8dp"
          android:paddingBottom="8dp"
          android:text="@string/button_addImage"
          android:textColor="@color/colorPrimary"
          android:textSize="16sp"
          app:layout_constraintEnd_toStartOf="@+id/placemarkLocation"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

      <Button
          android:id="@+id/placemarkLocation"
          android:layout_width="0dp"
          android:layout_height="36dp"
          android:layout_margin="16dp"
          android:layout_marginStart="25dp"
          android:layout_marginTop="8dp"
          android:layout_marginEnd="4dp"
          android:background="@color/colorAccent"
          android:paddingTop="8dp"
          android:paddingBottom="8dp"
          android:stateListAnimator="@null"
          android:text="@string/button_location"
          android:textColor="@color/colorPrimary"
          android:textSize="16sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/chooseImage"
          app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

      <ImageView
          android:id="@+id/placemarkImage"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="8dp"
          android:layout_marginBottom="24dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/placemarkLocation"
          app:srcCompat="@mipmap/ic_launcher" />

    </androidx.constraintlayout.widget.ConstraintLayout>

  </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>